events/static/events/main.css
/* CSS variables for LIGHT MODE */
:root {
    --body-background: linear-gradient(180deg, rgb(0,105,158) 0%, #118ab2 30%);
    --body-bg-color: #118ab2;
    --card-bg-color: rgba(255,255,255,.7);
    --color: black;
    --event-div-bg: rgba(255,255,255,.2);
    --event-ended-bg: rgba(255, 0, 0, .5);
    --event-started-bg: #06d6a0;
    --input-bg-color: rgba(255,255,255,.8);
    --moving-bg-color: rgba(0,0,0,.1);
    --navbar-bg-color: white;
    --section-bg-color: rgba(0, 102, 255, 0);
    --selected-border: #ef476f;
    --text-muted-color: rgb(98, 98, 98);
    --title-bg-color: #ef476f;
    --title-color: #073b4c;

    overflow-x: hidden;
}

/* CSS variables for DARK MODE */
.dark-mode {
    --body-background: linear-gradient(180deg, #073b4c 60%, rgb(37, 37, 37) 100%);
    --body-bg-color: #073b4c;
    --card-bg-color: rgba(0,0,0,.2);
    --color: #fff;
    --event-div-bg: rgba(0,0,0,.2);
    --event-ended-bg: rgba(255, 0, 0, .3);
    --event-started-bg: #06d69eb2;
    --input-bg-color: rgba(0,0,0,.8);
    --moving-bg-color: rgba(255,255,255,.1);
    --navbar-bg-color: rgba(0,0,0,.5);
    --section-bg-color: rgba(0,0,0,0);
    --selected-border: #ffd166;
    --text-muted-color: rgb(143, 143, 143);
    --title-bg-color: #ffd166;
    --title-color: #073b4c;
}

/*
Color palette
#ef476f -> pink
#ffd166 -> yellow
#06d6a0 -> green
#118ab2 -> light-blue
#073b4c -> dark-blue-greenish
*/

/* CSS animations */
@keyframes introAnimation {
    0% {
      opacity: 0;
      position: relative;
      left: -50%;
    }
    75% {
      position: relative;
      opacity: 1;
      left: 5%;
    }
    100% {
      position: relative;
      opacity: 1;
      left: 0%;
    }
}

@keyframes shakeAnimation {
    0% {left: -.5%;position:relative;}
    50% {left: .5%;position:relative;}
    100% {left: 0%;position:relative;}
}

@keyframes fadeInAnimation {
    0% {
        display: none;
        opacity: 0;
    }
    100% {
        display: block;
        opacity: 1;
    }
}

@keyframes timerNotStartedAnimation {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(60%);
    }
}

@keyframes timerStartedAnimation {
    0% {
        transform: scale(1);
    }
    100% {
        transform: scale(2);
    }
}

::selection {
    background-color: #06d6a0;
}

::-moz-selection {
    background-color: #06d6a0;
}

nav {
    background-color: var(--navbar-bg-color);
    transition: background-color 1s ease;
    margin: .5rem;
    z-index: 99;
}

.round-img {
    border-radius:50%;
}

.cursor-pointer {
    cursor: pointer;
}

.intro-animated {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-play-state: paused;
}

.entering {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
}

.entering-1 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .1s;
}

.entering-2 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .2s;
}

.entering-3 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .3s;
}

.entering-4 {
    animation-name: introAnimation;
    animation-duration: .6s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .4s;
}

.appearing {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
}

.appearing-1 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .2s;
}

.appearing-2 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .5s;
}

.appearing-3 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: .8s;
}

.appearing-4 {
    animation-name: fadeInAnimation;
    animation-duration: 1.5s;
    animation-fill-mode: backwards;
    animation-iteration-count: 1;
    animation-play-state: running;
    animation-delay: 1.1s;
}

.shaking {
    animation-name: shakeAnimation;
    animation-duration: .3s;
    animation-fill-mode: forwards;
    animation-iteration-count: 2;
    animation-play-state: running;
}

body {
    font-family: 'Poppins', sans-serif;
    color: var(--color);
    background-color: var(--body-bg-color);
    background: var(--body-background);
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;
    min-height: 100svh;
    transition: background-color 2s ease;
    overflow-x: hidden;
    margin: 0;
}

.text-muted {
    color: var(--text-muted-color) !important;
}

.title-section {
    position:relative;
    margin-bottom: 2rem;
    color: var(--title-color);
}

.title-section::before {
    content: "";
    position: absolute;
    width: 150%;
    height: 120%;
    top: -10%;
    left: -25%;
    z-index: -1;
    background-color: var(--title-bg-color);
    transition: .5s ease-in;
}

/* .best-date {
    color: var(--selected-border);
} */

.card-footer {
    color: var(--title-bg-color);
    user-select: none;
}

.loading-overlay{
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 100;
    left: 0;
    top: 0;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.8);
    overflow-x: hidden;
    transition: 0.5s;
  }
  
  .overlay-content {
    position: relative;
    top: 25%;
    text-align: center;
    margin-top: 30px;
  }

.section {
    background-color: var(--section-bg-color);
    margin-bottom: 1em;
    min-height: 30em;
    word-wrap: break-word;
}

input, .form-control, input:focus, .form-control:focus {
    color: var(--color);
    border-color: transparent;
    background-color: var(--input-bg-color);
}

select, option {
    color: var(--color) !important;
    border-color: transparent !important;
    background-color: var(--input-bg-color) !important;
}

.modal-open {
    padding-right: 0 !important;
}

.modal div {
    background-color: var(--body-bg-color);
}

.event-title {
    font-size: 3.5rem;
    text-align: center;
    word-wrap: break-word;
}

.event-clock-div {
    user-select: none;
    overflow: hidden;
    transition: .6s ease;
}

.clock-event-not-started::before {
    content: "";
    position: absolute;
    width: 250%;
    height: 150%;
    top: -25%;
    left: -150%;
    z-index: -1;
    background: linear-gradient(90deg, var(--event-div-bg), var(--event-div-bg) 45%, var(--moving-bg-color) 50%, var(--event-div-bg) 55%, var(--event-div-bg));
    animation-name: timerNotStartedAnimation;
    animation-duration: 3s;
    animation-fill-mode:forwards;
    animation-direction:normal;
    animation-iteration-count: infinite;
    animation-play-state: running;
    animation-timing-function: linear;
}

.clock-event-started::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    z-index: -1;
    background: radial-gradient(circle, var(--event-started-bg) 10%, var(--body-bg-color) 80%);
    animation-name: timerStartedAnimation;
    animation-duration: 2s;
    animation-fill-mode:forwards;
    animation-direction:alternate;
    animation-iteration-count: infinite;
    animation-play-state: running;
    animation-timing-function:ease-out;
}

.clock-event-ended::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    z-index: -1;
    background-color: var(--event-ended-bg);
}

.event-tot-div {
    background-color: var(--event-div-bg);
}

.event-info-div {
    background-color: var(--event-div-bg);
    word-wrap: break-word;
}

.event-chart-div {
    background-color: var(--event-div-bg);
}

.card {
    background-color: var(--card-bg-color);
}

.thumbnail-row {
    height: 20em;
    overflow-y: auto;
    overflow-x: hidden;
}

.theme-thumbnail {
    background-color: var(--body-background);
    color: #fff;
    cursor: pointer;
    transition: all .5s;
}

.theme-thumbnail:hover {
    opacity: 1;
    transform: scale(1.2);
    z-index: 10;
}

.theme-thumbnail:hover::before {
    opacity: 1;
    z-index: 10;
}

.thumbnail-selected {
    border: solid medium var(--selected-border);
}

.thumbnail-selected::before {
    opacity: 1 !important;
}

/* Event themes */
div[data-theme] {
    position: relative;
    background-color: rgba(0,0,0,.1);
}

div[data-theme]::before {
    content: "";
    position: absolute;
    left: 0;
    top:0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-repeat: no-repeat;
    z-index: -1;
}

div[data-theme="beach"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/beach.jpg');
    opacity: .3;
}

div[data-theme="birthday"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/birthday.jpg');
    opacity: .3;
}

div[data-theme="drink"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/drink.jpg');
    opacity: .3; 
}

div[data-theme="forest"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/forest.jpg');
    opacity: .3;
}

div[data-theme="graduation"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/graduation.jpg');
    opacity: .3;
}

div[data-theme="match"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/match.jpg');
    opacity: .3;
}

div[data-theme="meeting"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/meeting.jpg');
    opacity: .3;
}

div[data-theme="mountain"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/mountain.jpg');
    opacity: .3;
}

div[data-theme="music"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/music.jpg');
    opacity: .25;
}

div[data-theme="pizza"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/pizza.jpg');
    opacity: .4;
}

div[data-theme="popcorn"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/popcorn.jpg');
    opacity: .3;
}

div[data-theme="relax"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/relax.jpg');
    opacity: .3;
}

div[data-theme="ticket"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/ticket.jpg');
    opacity: .3;
}

div[data-theme="travel"]::before {
    background-image: url('https://schedama-assets.s3.eu-central-1.amazonaws.com/img/travel.jpg');
    opacity: .3;
}

